nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__setup_tool__graphs.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SetupNodeTool(1.2.3)" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
}

